@@ -15,6 +15,7 @@ production.
 === New features in 1.19 ===
 
 === Bug fixes in 1.19 ===
+* (bug 19838) API does not use interwiki cache.
 
 === API changes in 1.19 ===
 
